Fix header on small devices

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -27,8 +27,6 @@
 }
 
 .site-info {
-  float: left;
-
   @include media-query($on-palm) {
     float: none;
     display: block;
@@ -79,9 +77,6 @@
     }
 
     @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 30px;
         background-color: $background-color;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
